# remote-curl-client

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
remote_curl_client/: __init__.py  client.py
tests/: test_client.py
